--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,7 @@
     "package": "npm run build && cd dist && bestzip ../dist.zip *"
   },
   "dependencies": {
-    "@holochain/client": "^0.12.2",
+    "@holochain/client": "0.12.0",
     "@lit-labs/context": "^0.2.0",
     "@lit-labs/task": "^2.0.0",
     "@material/mwc-circular-progress": "^0.27.0",
@@ -24,7 +24,9 @@
     "@material/mwc-formfield": "^0.27.0",
     "@msgpack/msgpack": "^2.7.2",
     "@vaadin/date-time-picker": "^23.2.8",
-    "lit": "^2.6.1"
+    "lit": "^2.6.1",
+    "@neighbourhoods/client": "0.0.3",
+    "@neighbourhoods/nh-launcher-applet": "0.0.10"
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^4.3.0",
