update tsconfig to work with vite env variable imports

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -15,7 +15,8 @@
     "sourceMap": true,
     "inlineSources": true,
     "incremental": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["vite/client"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts"]
 }
