--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "network": "hc s clean && npm run build:happ && UI_PORT=8888 concurrently \"npm start -w ui\" \"npm run launch:happ\" \"holochain-playground\"",
     "test": "npm run build:zomes && hc app pack workdir --recursive && npm t -w tests",
     "launch:happ": "echo \"pass\" | RUST_LOG=warn hc launch --piped -n $AGENTS workdir/forum.happ --ui-port $UI_PORT network mdns",
-    "package": "npm run build:happ && npm run package -w ui && hc web-app pack workdir --recursive",
+    "package": "npm run build:happ && npm run package:ui -w ui && hc web-app pack workdir --recursive",
     "build:happ": "npm run build:zomes && hc app pack workdir --recursive",
     "build:zomes": "RUSTFLAGS='' CARGO_TARGET_DIR=target cargo build --release --target wasm32-unknown-unknown",
     "dev": "dotenv -- npm run network:dev",
     "dev2": "dotenv -- npm run network:dev2",
     "network:dev": "hc s clean && npm run build:test-happ && dotenv -- concurrently \"open-cli http://localhost:${UI_PORT} && cd ui && npm run dev\" \"dotenv -- npm run start:dev\"",
-    "start:dev": "RUST_LOG=warn WASM_LOG=debug echo \"pass\" | hc s --piped -f=$VITE_ADMIN_PORT generate ./workdir/sensemaker-enabled/todo-sensemaker.happ --run $VITE_HC_PORT -a todo-sensemaker network mdns",
+    "start:dev": "RUST_LOG=warn WASM_LOG=debug echo \"pass\" | hc s --piped -f=$VITE_ADMIN_PORT generate ./workdir/sensemaker-enabled/forum.happ --run $VITE_HC_PORT -a forum network mdns",
     "network:dev2": "hc s clean && npm run build:test-happ && dotenv -- concurrently \"open-cli http://localhost:${UI_PORT} && open-cli http://localhost:${UI_PORT_2} && cd ui && npm run dev2\" \"dotenv -- npm run start:dev2\"",
-    "start:dev2": "RUST_LOG=warn WASM_LOG=debug echo \"pass\" | hc s --piped -f=$VITE_ADMIN_PORT,$VITE_ADMIN_PORT_2 generate ./workdir/sensemaker-enabled/todo-sensemaker.happ -n 2 --run=$VITE_HC_PORT,$VITE_HC_PORT_2 -a todo-sensemaker network mdns",
+    "start:dev2": "RUST_LOG=warn WASM_LOG=debug echo \"pass\" | hc s --piped -f=$VITE_ADMIN_PORT,$VITE_ADMIN_PORT_2 generate ./workdir/sensemaker-enabled/forum.happ -n 2 --run=$VITE_HC_PORT,$VITE_HC_PORT_2 -a forum network mdns",
     "download-sensemaker": "rimraf workdir/sensemaker.dna && curl -L --output workdir/sensemaker.dna https://github.com/neighbour-hoods/sensemaker-lite/releases/download/v0.0.8-alpha/sensemaker.dna; exit 0",
     "build:test-happ": "npm run download-sensemaker && npm run build:dnas && hc app pack ./workdir/sensemaker-enabled",
     "build:dnas": "npm run build:zomes && hc dna pack ./dnas/forum/workdir"
