--- a/workdir/web-happ.yaml
+++ b/workdir/web-happ.yaml
@@ -2,6 +2,6 @@
 manifest_version: "1"
 name: forum
 ui:
-  bundled: "../ui/dist.zip"
+  bundled: "../ui/ui.zip"
 happ_manifest:
   bundled: "./forum.happ"
