--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start:dev2": "RUST_LOG=warn WASM_LOG=debug echo \"pass\" | hc s --piped -f=$VITE_ADMIN_PORT,$VITE_ADMIN_PORT_2 generate ./workdir/sensemaker-enabled/forum.happ -n 2 --run=$VITE_HC_PORT,$VITE_HC_PORT_2 -a forum network mdns",
     "download-sensemaker": "rimraf workdir/sensemaker.dna && curl -L --output workdir/sensemaker.dna https://github.com/neighbour-hoods/sensemaker-lite/releases/download/v0.0.8-alpha/sensemaker.dna; exit 0",
     "build:test-happ": "npm run download-sensemaker && npm run build:dnas && hc app pack ./workdir/sensemaker-enabled",
-    "build:dnas": "npm run build:zomes && hc dna pack ./dnas/forum/workdir"
+    "build:dnas": "npm run build:zomes && hc dna pack ./dnas/forum/workdir",
+    "postinstall": "test -f .env || cp .env.example .env"
   },
   "devDependencies": {
     "@holochain-playground/cli": "^0.1.1",
